--- a/setup/templates/init/initialize.env
+++ b/setup/templates/init/initialize.env
@@ -5,5 +5,6 @@ source $HOME/.conf
 source $CONF/common/etc/env
 source $CONF/site/$SITE/etc/env
 source $CONF/plat/$PLAT/etc/env
+source $CONF/site/$SITE/host/$HOST/etc/env
 
 # source project env files also
