further updates to initialization scripts

--- a/setup/templates/init/initialize.env
+++ b/setup/templates/init/initialize.env
@@ -6,5 +6,6 @@ source $CONF/common/etc/env
 source $CONF/site/$SITE/etc/env
 source $CONF/plat/$PLAT/etc/env
 source $CONF/site/$SITE/host/$HOST/etc/env
+source $CONF/site/$SITE/host/$HOST/plat/$PLAT/etc/env
 
 # source project env files also
